--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="content">
         <h3>REET KUMAR BIND</h3>
-        <p>I'm a front-end developer in Tecnics Integration Technology</p>
+        <p>Work's as Software Engineer Tecnics Integration Technology Pvt. Ltd. </p>
         <a href="#" class="btn">Download CV</a>
     </div>
 
@@ -136,8 +136,8 @@
 
         <div class="box">
             <i class="fas fa-code"></i>
-            <h3>web design</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <h3>Web design</h3>
+            <p>I have basic knowledge of websites development by using Visual Studio code i have created a lots of projests.</p>
         </div>
 
         <div class="box">
@@ -189,7 +189,7 @@
             <div class="content">
                 <h2>Complete Responsive Food Website Design Using HTML  CSS  JavaScript.</h2>
                 <h3>
-                    <a href="https://razishah1.github.io/Complete-Responsive-Food-Website-Design-Using-HTML-CSS-JavaScript/">Visit Now..</a>
+                    <a href="https://github.com/Reetkumarbind/foodorder.git">Visit Now..</a>
                 </h3>
             </div>
         </div>
