--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="content">
                 <h2>Complete Responsive Food Website Design Using HTML  CSS  JavaScript.</h2>
                 <h3>
-                    <a href="https://github.com/Reetkumarbind/foodorder.git">Visit Now..</a>
+                    <a href="https://reetkumarbind.github.io/foodorder/">Visit Now..</a>
                 </h3>
             </div>
         </div>
@@ -197,7 +197,7 @@
         <div class="box">
             <img src="image/img-2.jpg" alt="">
             <div class="content">
-                <h2>Complete Responsive Travel Website Design Using HTML  CSS  JavaScript.</h2>
+                <h2>Complete Responsive Travel Website Design Using HTML,CSS & JavaScript</h2>
                 <h3>
                     <a href="https://razishah1.github.io/Complete-Responsive-Travel-Website-Design-Using-HTML-CSS-JavaScript/">Visit Now..</a>
                 </h3>
