--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="content">
                 <h2>Complete Responsive Travel Website Design Using HTML,CSS & JavaScript</h2>
                 <h3>
-                    <a href="https://razishah1.github.io/Complete-Responsive-Travel-Website-Design-Using-HTML-CSS-JavaScript/">Visit Now..</a>
+                    <a href="https://reetkumarbind.github.io/travel/">Visit Now & Book </a>
                 </h3>
             </div>
         </div>
