--- a/index.html
+++ b/index.html
@@ -143,31 +143,31 @@
         <div class="box">
             <i class="fas fa-paint-brush"></i>
             <h3>graphic design</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>Graphic designers create visual concepts, using computer software or by hand, to communicate ideas that inspire, inform, and captivate consumers. They develop the overall layout and production design for applications such as advertisements, brochures, magazines, and reports.</p>
         </div>
 
         <div class="box">
             <i class="fas fa-mobile"></i>
             <h3>responsive design</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>Responsive web design (RWD) is a web development approach that creates dynamic changes to the appearance of a website, depending on the screen size and orientation of the device being used to view.</p>
         </div>
 
         <div class="box">
             <i class="fas fa-bullhorn"></i>
             <h3>digital marketing</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>A digital marketing agency is a firm that deals exclusively in marketing to consumers through digital channels. This includes creating and launching campaigns ....</p>
         </div>
 
         <div class="box">
             <i class="fas fa-search-dollar"></i>
             <h3>SEO marketing</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>Search engine optimization (SEO) is the practice of orienting your website to rank higher on a search engine results page (SERP) so that you receive more traffic. The aim is typically to rank on the first page of Google results for search terms that mean the most to your target audience..</p>
         </div>
 
         <div class="box">
             <i class="fab fa-wordpress"></i>
             <h3>wordpress</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>Create a free website or build a blog with ease on WordPress.com. Dozens of free, customizable, mobile-ready designs and themes. Free hosting and support..</p>
         </div>
 
     </div>
