--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="content">
                 <h2>Complete Responsive Coffee Shop Website Design Using HTML  CSS  JavaScript</h2>
                 <h3>
-                    <a href="https://razishah1.github.io/Complete-Responsive-Coffee-Shop-Website-Design-Using-HTML-CSS-JavaScript/">Visit Now..</a>
+                    <a href=" https://reetkumarbind.github.io/coffeeshop/">Visit Now..</a>
                 </h3>
             </div>
         </div>
