--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="content">
                 <h2>Complete Responsive Cars Website Design Using HTML  CSS  JavaScript.</h2>
                 <h3>
-                    <a href="https://razishah1.github.io/HTML-CSS-Responsive-Cars-Website/">Visit Now..</a>
+                    <a href="https://reetkumarbind.github.io/car/">Visit Now..</a>
                 </h3>
             </div>
         </div>
@@ -229,7 +229,7 @@
             <div class="content">
                 <h2>Complete Responsive Books Website Design Using HTML  CSS  JavaScript.</h2>
                 <h3>
-                    <a href="https://razishah1.github.io/HTML-CSS-responsive-books-webstie/">Visit Now..</a>
+                    <a href="https://reetkumarbind.github.io/bookshop/">Visit Now..</a>
                 </h3>
             </div>
         </div>
@@ -239,7 +239,7 @@
             <div class="content">
                 <h2>Complete Responsive Hospital Website Design Using HTML  CSS  JavaScript.</h2>
                 <h3>
-                    <a href="https://razishah1.github.io/Complete-Responsive-Hospital-Website-Design-Using-HTML-CSS-JavaScript/">Visit Now..</a>
+                    <a href="https://reetkumarbind.github.io/hospital/">Visit Now..</a>
                 </h3>
             </div>
         </div>
