--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <h2>Complete Responsive Food Website Design Using HTML CSS JavaScript.</h2>
                     <h3>
                         <a
-                            href="https://razishah1.github.io/Complete-Responsive-Food-Website-Design-Using-HTML-CSS-JavaScript/">Food Order >> Visit
+                            href="https://github.com/Reetkumarbind/foodorder">Food Order >> Visit
                             Now..</a>
                     </h3>
                 </div>
@@ -227,7 +227,7 @@
                     <h2>Complete Responsive Travel Website Design Using HTML CSS JavaScript.</h2>
                     <h3>
                         <a
-                            href="https://razishah1.github.io/Complete-Responsive-Travel-Website-Design-Using-HTML-CSS-JavaScript/">Toure & Travels >> Visit
+                            href="https://github.com/Reetkumarbind/travel">Toure & Travels >> Visit
                             Now..</a>
                     </h3>
                 </div>
@@ -239,7 +239,7 @@
                     <h2>Complete Responsive Coffee Shop Website Design Using HTML CSS JavaScript</h2>
                     <h3>
                         <a
-                            href="https://razishah1.github.io/Complete-Responsive-Coffee-Shop-Website-Design-Using-HTML-CSS-JavaScript/">Visit
+                            href="https://github.com/Reetkumarbind/coffeeshop ">Visit
                             Now..</a>
                     </h3>
                 </div>
@@ -250,7 +250,7 @@
                 <div class="content">
                     <h2>Complete Responsive Cars Website Design Using HTML CSS JavaScript.</h2>
                     <h3>
-                        <a href="https://razishah1.github.io/HTML-CSS-Responsive-Cars-Website/">Visit Now..</a>
+                        <a href="https://github.com/Reetkumarbind/car">Visit Now..</a>
                     </h3>
                 </div>
             </div>
@@ -260,7 +260,7 @@
                 <div class="content">
                     <h2>Complete Responsive Books Website Design Using HTML CSS JavaScript.</h2>
                     <h3>
-                        <a href="https://razishah1.github.io/HTML-CSS-responsive-books-webstie/">Visit Now..</a>
+                        <a href="https://github.com/Reetkumarbind/bookshop">Visit Now..</a>
                     </h3>
                 </div>
             </div>
@@ -271,7 +271,7 @@
                     <h2>Complete Responsive Hospital Website Design Using HTML CSS JavaScript.</h2>
                     <h3>
                         <a
-                            href="https://razishah1.github.io/Complete-Responsive-Hospital-Website-Design-Using-HTML-CSS-JavaScript/">Visit
+                            href="https://github.com/Reetkumarbind/hospital">Visit
                             Now..</a>
                     </h3>
                 </div>
