--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <h2>Complete Responsive Food Website Design Using HTML CSS JavaScript.</h2>
                     <h3>
                         <a
-                            href="https://github.com/Reetkumarbind/foodorder">Food Order >> Visit
+                            href="https://reetkumarbind.github.io/foodorder">Food Order >> Visit
                             Now..</a>
                     </h3>
                 </div>
@@ -227,7 +227,7 @@
                     <h2>Complete Responsive Travel Website Design Using HTML CSS JavaScript.</h2>
                     <h3>
                         <a
-                            href="https://github.com/Reetkumarbind/travel">Toure & Travels >> Visit
+                            href="https://reetkumarbind.github.io/travel">Toure & Travels >> Visit
                             Now..</a>
                     </h3>
                 </div>
@@ -239,7 +239,7 @@
                     <h2>Complete Responsive Coffee Shop Website Design Using HTML CSS JavaScript</h2>
                     <h3>
                         <a
-                            href="https://github.com/Reetkumarbind/coffeeshop ">Visit
+                            href="https://reetkumarbind.github.io/coffeeshop ">Visit
                             Now..</a>
                     </h3>
                 </div>
@@ -250,7 +250,7 @@
                 <div class="content">
                     <h2>Complete Responsive Cars Website Design Using HTML CSS JavaScript.</h2>
                     <h3>
-                        <a href="https://github.com/Reetkumarbind/car">Visit Now..</a>
+                        <a href="https://reetkumarbind.github.io/car">Visit Now..</a>
                     </h3>
                 </div>
             </div>
@@ -260,7 +260,7 @@
                 <div class="content">
                     <h2>Complete Responsive Books Website Design Using HTML CSS JavaScript.</h2>
                     <h3>
-                        <a href="https://github.com/Reetkumarbind/bookshop">Visit Now..</a>
+                        <a href="https://reetkumarbind.github.io/bookshop">Visit Now..</a>
                     </h3>
                 </div>
             </div>
@@ -271,7 +271,7 @@
                     <h2>Complete Responsive Hospital Website Design Using HTML CSS JavaScript.</h2>
                     <h3>
                         <a
-                            href="https://github.com/Reetkumarbind/hospital">Visit
+                            href="https://reetkumarbind.github.io/hospital">Visit
                             Now..</a>
                     </h3>
                 </div>
