--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 •	Animation
                 
                 </p>
-            <a href="#" class="btn">Download CV</a>
+            <a href="cv.pdf" class="btn">Download CV</a>
         </div>
 
         
