--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             <div class="content">
                 <h3>my name is <span>REET KUMAR BIND</span></h3>
-                <p>I've done MCA from VTU 2013 Batch From Bangalore T.John Institute of Technology.
+                <p style="color:red;">I've done MCA from VTU 2013 Batch From Bangalore T.John Institute of Technology.
                    I'm very Enthusiastic toward my work and carrier.
                    I love bollywood Movies, Travelling, facebook.
                    
