target = new page

--- a/index.html
+++ b/index.html
@@ -65,15 +65,14 @@
             <a href="cv.pdf" class="btn">Download CV</a>
         </div>
 
-        
 
 
         <div class="share">
-            <a href="https://www.facebook.com/reetkumarbind" class="fab fa-facebook-f"></a>
-            <a href="https://twitter.com/REETMEENA" class="fab fa-twitter"></a>
-            <a href="https://www.instagram.com/reetkumarbind/" class="fab fa-instagram"></a>
-            <a href="https://www.linkedin.com/in/reet-kumar-bind-66306159/" class="fab fa-linkedin"></a>
-            <a href="https://in.pinterest.com/reetkumarbind/" class="fab fa-pinterest"></a>
+            <a href="https://www.facebook.com/reetkumarbind"  target="_blank" class="fab fa-facebook-f"></a>
+            <a href="https://twitter.com/REETMEENA"  target="_blank" class="fab fa-twitter"></a>
+            <a href="https://www.instagram.com/reetkumarbind/"  target="_blank" class="fab fa-instagram"></a>
+            <a href="https://www.linkedin.com/in/reet-kumar-bind-66306159/"  target="_blank" class="fab fa-linkedin"></a>
+            <a href="https://in.pinterest.com/reetkumarbind/" target="_blank" class="fab fa-pinterest"></a>
         </div>
 
     </section>
