--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="content">
             <h3>REET KUMAR BIND</h3>
             <p>Front-end developer 
-                Software Engineer with 7 Years of experience in Software/IT Companies as Application support.
+                Software Engineer with 7 Years of experience in Software/IT Companies.
 <br>
                 Technical Skill Set <br>
                 •	HTML
