google serch console meta tag added in head

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="8GHm2qY1gC5QYu-Ocu05m7F8ANE0Qq9565P3kHrNbgA" />
     <title>My personal portfolio</title>
 
     <!-- font awesome cdn link  -->
